<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFF0F5"
    tools:context=".ActivityCalc">

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/teal_700"
        tools:layout_editor_absoluteX="1dp"
        tools:layout_editor_absoluteY="1dp"
        tools:ignore="ExtraText,MissingConstraints">

        <TextView
            android:id="@+id/textViewResult"
            style="@style/MyCoolStyle"
            android:layout_width="match_parent"
            android:layout_height="196dp"
            android:layout_weight="18"
            android:background="#40F3DE"
            android:gravity="center"
            android:inputType="number"
            android:lines="2"
            android:text=""
            android:textSize="30sp" />

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_weight="1"
            >

            <com.google.android.material.button.MaterialButton
                android:id="@+id/buttonOne"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_span="1"
                android:layout_weight="1"
                android:text="@string/_1"
                android:textSize="@dimen/btnTextSize"
                app:cornerRadius="@dimen/btnRadius"
                android:layout_margin="@dimen/btnMargin"
                />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/buttonTwo"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_span="1"
                android:layout_weight="1"
                android:text="@string/_2"
                android:textSize="@dimen/btnTextSize"
                app:cornerRadius="@dimen/btnRadius"
                android:layout_margin="@dimen/btnMargin"
                />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/buttonThree"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_span="1"
                android:layout_weight="1"
                android:text="@string/_3"
                android:textSize="@dimen/btnTextSize"
                app:cornerRadius="@dimen/btnRadius"
                android:layout_margin="@dimen/btnMargin"
                />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/buttonDivision"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_span="1"
                android:layout_weight="1"
                android:text="@string/_div"
                android:textSize="@dimen/btnTextSize"
                app:cornerRadius="@dimen/btnRadius"
                android:layout_margin="@dimen/btnMargin"
                />
        </TableRow>>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/buttonFour"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_span="1"
                android:layout_weight="1"
                android:text="@string/_4"
                android:textSize="@dimen/btnTextSize"
                app:cornerRadius="@dimen/btnRadius"
                android:layout_margin="@dimen/btnMargin"
                />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/buttonFive"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_span="1"
                android:layout_weight="1"
                android:text="@string/_5"
                android:textSize="@dimen/btnTextSize"
                app:cornerRadius="@dimen/btnRadius"
                android:layout_margin="@dimen/btnMargin"
                />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/buttonSix"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_span="1"
                android:layout_weight="1"
                android:text="@string/_6"
                android:textSize="@dimen/btnTextSize"
                app:cornerRadius="@dimen/btnRadius"
                android:layout_margin="@dimen/btnMargin"
                />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/buttonMultiplication"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_span="1"
                android:layout_weight="1"
                android:text="@string/mul"
                android:textSize="@dimen/btnTextSize"
                app:cornerRadius="@dimen/btnRadius"
                android:layout_margin="@dimen/btnMargin"
                />
        </TableRow>>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/buttonSeven"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_span="1"
                android:layout_weight="1"
                android:text="@string/_7"
                android:textSize="@dimen/btnTextSize"
                app:cornerRadius="@dimen/btnRadius"
                android:layout_margin="@dimen/btnMargin"
                />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/buttonEight"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_span="1"
                android:layout_weight="1"
                android:text="@string/_8"
                android:textSize="@dimen/btnTextSize"
                app:cornerRadius="@dimen/btnRadius"
                android:layout_margin="@dimen/btnMargin"
                />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/buttonNine"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_span="1"
                android:layout_weight="1"
                android:text="@string/_9"
                android:textSize="@dimen/btnTextSize"
                app:cornerRadius="@dimen/btnRadius"
                android:layout_margin="@dimen/btnMargin"
                />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/buttonSubtraction"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_span="1"
                android:layout_weight="1"
                android:text="@string/sub"
                android:textSize="@dimen/btnTextSize"
                app:cornerRadius="@dimen/btnRadius"
                android:layout_margin="@dimen/btnMargin"
                />

        </TableRow>>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/buttonZero"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_span="1"
                android:layout_weight="1"
                android:text="@string/_0"
                android:textSize="@dimen/btnTextSize"
                app:cornerRadius="@dimen/btnRadius"
                android:layout_margin="@dimen/btnMargin"
                />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/buttonAddition"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_span="1"
                android:layout_weight="1"
                android:text="@string/add"
                android:textSize="@dimen/btnTextSize"
                app:cornerRadius="@dimen/btnRadius"
                android:layout_margin="@dimen/btnMargin"
                />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/buttonEqually"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_span="1"
                android:layout_weight="1"
                android:text="@string/eq"
                android:textSize="@dimen/btnTextSize"
                app:cornerRadius="@dimen/btnRadius"
                android:layout_margin="@dimen/btnMargin"
                />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/buttonClear"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_span="1"
                android:layout_weight="1"
                android:text="@string/clear"
                android:textSize="@dimen/btnTextSize"
                app:cornerRadius="@dimen/btnRadius"
                android:layout_margin="@dimen/btnMargin"
                />
        </TableRow>>

    </TableLayout>
</androidx.constraintlayout.widget.ConstraintLayout>